--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 550
+  Left = 515
   Height = 600
-  Top = 187
+  Top = 215
   Width = 1000
   Caption = '*92'
   ClientHeight = 600
@@ -13,8 +13,8 @@ object Form1: TForm1
   OnResize = FormResize
   object sbBar: TStatusBar
     Left = 0
-    Height = 23
-    Top = 577
+    Height = 19
+    Top = 581
     Width = 1000
     Panels = <    
       item
@@ -32,7 +32,7 @@ object Form1: TForm1
   end
   inline seTextField: TSynEdit
     Left = 0
-    Height = 577
+    Height = 581
     Top = 0
     Width = 1000
     Align = alClient
@@ -613,6 +613,22 @@ object Form1: TForm1
         OnClick = miSynHiClick
       end
     end
+    object MenuItem6: TMenuItem
+      Caption = 'Run'
+      object miCompile: TMenuItem
+        Caption = 'Compile'
+      end
+      object miRun: TMenuItem
+        Caption = 'Compile and Run'
+      end
+    end
+    object MenuItem5: TMenuItem
+      Caption = 'Tools'
+      object miCompilerOptions: TMenuItem
+        Caption = 'Compiler options'
+        OnClick = miCompilerOptionsClick
+      end
+    end
     object MenuItem4: TMenuItem
       Caption = 'Help'
       object miAbout: TMenuItem
@@ -679,5 +695,70 @@ object Form1: TForm1
     MaxFontSize = 0
     Left = 304
     Top = 104
+  end
+  object SynAnySyn1: TSynAnySyn
+    Enabled = False
+    CommentAttri.Foreground = clTeal
+    Comments = [csAsmStyle]
+    DetectPreprocessor = False
+    IdentifierAttri.Foreground = clSilver
+    IdentifierChars = '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ_abcdefghijklmnopqrstuvwxyz'
+    KeyAttri.Foreground = 39302
+    ObjectAttri.Foreground = clGreen
+    KeyWords.Strings = (
+      'ADC'
+      'AND'
+      'CALL'
+      'CLC'
+      'DEC'
+      'DIV'
+      'ENTRY'
+      'EQU'
+      'FORMAT'
+      'GLOBAL'
+      'INC'
+      'INT'
+      'JA'
+      'JAE'
+      'JB'
+      'JE'
+      'JMP'
+      'JNZ'
+      'JZ'
+      'LEA'
+      'LOOP'
+      'MOV'
+      'OR'
+      'ORG'
+      'POP'
+      'POPFD'
+      'PUSH'
+      'PUSHFD'
+      'RET'
+      'SECTION'
+      'SHL'
+      'SHR'
+      'STC'
+      'TEST'
+      'XOR'
+    )
+    Objects.Strings = (
+      'DB'
+      'DD'
+      'DQ'
+      'DT'
+      'DW'
+      'RB'
+      'RESB'
+    )
+    NumberAttri.Foreground = 10068523
+    StringAttri.Foreground = 10068523
+    SymbolAttri.Foreground = 3685854
+    Markup = False
+    Entity = False
+    DollarVariables = False
+    ActiveDot = False
+    Left = 416
+    Top = 184
   end
 end
