Refactor: New Compilet options UI

--- a/compileropt.lfm
+++ b/compileropt.lfm
@@ -1,14 +1,13 @@
 object Form2: TForm2
   Left = 342
-  Height = 202
+  Height = 421
   Top = 250
   Width = 504
   BorderStyle = bsSizeToolWin
   Caption = 'Compiler options'
-  ClientHeight = 202
+  ClientHeight = 421
   ClientWidth = 504
-  Constraints.MaxHeight = 202
-  Constraints.MinHeight = 202
+  Constraints.MaxHeight = 504
   Constraints.MinWidth = 504
   OnCreate = FormCreate
   Position = poScreenCenter
@@ -40,7 +39,7 @@ object Form2: TForm2
   object Label2: TLabel
     Left = 16
     Height = 17
-    Top = 88
+    Top = 92
     Width = 55
     Anchors = [akLeft]
     Caption = 'Params:'
@@ -48,7 +47,7 @@ object Form2: TForm2
   object btnCancel: TButton
     Left = 8
     Height = 33
-    Top = 157
+    Top = 376
     Width = 96
     Anchors = [akLeft, akBottom]
     Caption = 'Cancel'
@@ -58,7 +57,7 @@ object Form2: TForm2
   object bntOK: TButton
     Left = 392
     Height = 33
-    Top = 157
+    Top = 376
     Width = 96
     Anchors = [akRight, akBottom]
     Caption = 'OK'
@@ -68,14 +67,49 @@ object Form2: TForm2
   object edtParams: TEdit
     Left = 8
     Height = 34
-    Top = 104
-    Width = 480
+    Top = 112
+    Width = 394
     Anchors = [akLeft, akRight]
     TabOrder = 4
   end
+  object btnAddParam: TButton
+    Left = 413
+    Height = 34
+    Top = 112
+    Width = 75
+    Caption = 'Add'
+    TabOrder = 5
+    OnClick = btnAddParamClick
+  end
+  object lbParams: TListBox
+    Left = 8
+    Height = 168
+    Top = 160
+    Width = 480
+    ItemHeight = 0
+    TabOrder = 6
+    TopIndex = -1
+  end
+  object btnDeleteParam: TButton
+    Left = 8
+    Height = 34
+    Top = 328
+    Width = 75
+    Anchors = [akRight]
+    Caption = 'Delete'
+    TabOrder = 7
+  end
+  object btnTestParams: TButton
+    Left = 413
+    Height = 34
+    Top = 328
+    Width = 75
+    Caption = 'Test all'
+    TabOrder = 8
+  end
   object dOpen: TOpenDialog
     Filter = 'Windows executable|*.exe|All files|*.*'
-    Left = 136
-    Top = 152
+    Left = 56
+    Top = 192
   end
 end
