--- a/compileropt.lfm
+++ b/compileropt.lfm
@@ -1,13 +1,12 @@
 object Form2: TForm2
   Left = 342
-  Height = 421
+  Height = 575
   Top = 250
   Width = 504
   BorderStyle = bsSizeToolWin
   Caption = 'Compiler options'
-  ClientHeight = 421
+  ClientHeight = 575
   ClientWidth = 504
-  Constraints.MaxHeight = 504
   Constraints.MinWidth = 504
   OnCreate = FormCreate
   Position = poScreenCenter
@@ -39,7 +38,7 @@ object Form2: TForm2
   object Label2: TLabel
     Left = 16
     Height = 17
-    Top = 92
+    Top = 88
     Width = 55
     Anchors = [akLeft]
     Caption = 'Params:'
@@ -47,7 +46,7 @@ object Form2: TForm2
   object btnCancel: TButton
     Left = 8
     Height = 33
-    Top = 376
+    Top = 530
     Width = 96
     Anchors = [akLeft, akBottom]
     Caption = 'Cancel'
@@ -57,7 +56,7 @@ object Form2: TForm2
   object bntOK: TButton
     Left = 392
     Height = 33
-    Top = 376
+    Top = 530
     Width = 96
     Anchors = [akRight, akBottom]
     Caption = 'OK'
@@ -67,7 +66,7 @@ object Form2: TForm2
   object edtParams: TEdit
     Left = 8
     Height = 34
-    Top = 112
+    Top = 108
     Width = 394
     Anchors = [akLeft, akRight]
     TabOrder = 4
@@ -75,7 +74,7 @@ object Form2: TForm2
   object btnAddParam: TButton
     Left = 413
     Height = 34
-    Top = 112
+    Top = 108
     Width = 75
     Caption = 'Add'
     TabOrder = 5
@@ -83,8 +82,8 @@ object Form2: TForm2
   end
   object lbParams: TListBox
     Left = 8
-    Height = 168
-    Top = 160
+    Height = 120
+    Top = 144
     Width = 480
     ItemHeight = 0
     TabOrder = 6
@@ -94,7 +93,7 @@ object Form2: TForm2
   object btnDeleteParam: TButton
     Left = 8
     Height = 34
-    Top = 328
+    Top = 264
     Width = 75
     Anchors = [akRight]
     Caption = 'Delete'
@@ -102,17 +101,58 @@ object Form2: TForm2
     OnClick = btnDeleteParamClick
   end
   object btnTestParams: TButton
-    Left = 413
-    Height = 34
-    Top = 328
-    Width = 75
+    Left = 288
+    Height = 33
+    Top = 530
+    Width = 94
     Caption = 'Test all'
     TabOrder = 8
     OnClick = btnTestParamsClick
   end
+  object Label3: TLabel
+    Left = 16
+    Height = 17
+    Top = 308
+    Width = 152
+    Caption = 'Additional commands:'
+  end
+  object edtAdditionalCommands: TEdit
+    Left = 8
+    Height = 34
+    Top = 328
+    Width = 394
+    TabOrder = 9
+  end
+  object btnAddCommands: TButton
+    Left = 413
+    Height = 34
+    Top = 328
+    Width = 75
+    Caption = 'Add'
+    TabOrder = 10
+    OnClick = btnAddCommandsClick
+  end
+  object lbAdditionalCommands: TListBox
+    Left = 8
+    Height = 112
+    Top = 368
+    Width = 480
+    ItemHeight = 0
+    TabOrder = 11
+    TopIndex = -1
+  end
+  object btnDeleteCommands: TButton
+    Left = 8
+    Height = 34
+    Top = 480
+    Width = 75
+    Caption = 'Delete'
+    TabOrder = 12
+    OnClick = btnDeleteCommandsClick
+  end
   object dOpen: TOpenDialog
     Filter = 'Windows executable|*.exe|All files|*.*'
-    Left = 56
-    Top = 192
+    Left = 32
+    Top = 160
   end
 end
