--- a/unit1.lfm
+++ b/unit1.lfm
@@ -11,6 +11,7 @@ object Form1: TForm1
   OnClose = FormClose
   OnCreate = FormCreate
   OnResize = FormResize
+  LCLVersion = '3.2.0.0'
   object sbBar: TStatusBar
     Left = 0
     Height = 19
